--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <header> ALURAFLIX</header>
-<H1></ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?<H1>
+<H1> ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</H1>
 #Homem-aranha
 
