--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
+
+<body></body>
+
 <header> ALURAFLIX</header>
+
+
 <H1> ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</H1>
-#Homem-aranha
+   <p>#Homem-aranha</p>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/
+   gt_fAE1Eg2Q?si=oUzujAxdt5u42JNK" title="YouTube video player" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+     picture-in-picture; web-share" 
+     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+
+
+
+
+
+
+
+
+
 
