--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
 <header> ALURAFLIX</header>
+<section> 
+
 <div>
 
 <H1> ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</H1>
@@ -25,8 +27,7 @@
      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
   </div>
-  
-
+</section>
 
     </body>
 
