--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
 <head>
-<link rel="stylesheet" href="styles.css"></head>
+<link rel="stylesheet" href="style.css"></head>
 <title>Aluraflix</title>
 
 
